Fix page layout issues

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ ul {
 }
 
 .header-nav {
-  padding:1rem 3rem;
+  padding: 1rem 3rem;
 }
 
 .nav-bar {
@@ -49,8 +49,8 @@ ul {
 }
 
 .add-list {
-  border-left: 3px solid #000;
-  border-right: 3px solid #000;
+  border-left: 4px solid #000;
+  border-right: 4px solid #000;
 }
 
 /* .line {
@@ -61,13 +61,29 @@ ul {
   margin-bottom: 1rem;
 } */
 
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 20px;
   margin: 3rem auto;
+} */
+
+.main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.books-lists {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 .book-list-ui {
@@ -91,7 +107,7 @@ ul {
   background: #e0e0e0;
 }
 
-.books-list {
+.books-inputs {
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -101,6 +117,10 @@ ul {
   margin-bottom: 1rem;
   width: 50%;
   padding: 0 20px;
+}
+
+.books-inputs h2 {
+  align-self: center;
 }
 
 .remove-btn {
@@ -117,6 +137,10 @@ ul {
   width: 15%;
 }
 
+.hidden {
+  display: none;
+}
+
 #title,
 #author {
   width: 100%;
@@ -124,6 +148,8 @@ ul {
   padding: 8px;
   border: 4px solid black;
 }
+
+
 
 #copyright {
   padding: 1.5rem;
